--- a/cloudwatch-exporter-chart/templates/secret.yaml
+++ b/cloudwatch-exporter-chart/templates/secret.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cloudwatch-exporter-chart-secret
+  name: {{ include "cloudwatch-exporter-chart.fullname" . }}
   labels:
-    app: cloudwatch-exporter-chart
+    app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/cluster: {{ include "cloudwatch-exporter-chart.fullname" . }}
 type: Opaque
 data:
-  {{ if .Values.aws.aws_access_key_id }}
-  aws_access_key_id: {{ .Values.aws.aws_access_key_id | b64enc | quote }}
+  {{ if .Values.aws.accessKeyId }}
+  aws-access-key-id: {{ .Values.aws.accessKeyId | b64enc | quote }}
   {{ end }}
-  {{ if .Values.aws.aws_secret_access_key }}
-  aws_secret_access_key: {{ .Values.aws.aws_secret_access_key | b64enc | quote }}
+  {{ if .Values.aws.secretAccessKey }}
+  aws-secret-access-key: {{ .Values.aws.secretAccessKey | b64enc | quote }}
   {{ end }}
