Adding servicemonitor, change to real cluster

--- a/jbt-athena-exporter/templates/secret.yaml
+++ b/jbt-athena-exporter/templates/secret.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "cloudwatch-exporter-chart.fullname" . }}
+  name: {{ include "jbt-athena-exporter.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+    app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/cluster: {{ include "cloudwatch-exporter-chart.fullname" . }}
+    app.kubernetes.io/cluster: {{ include "jbt-athena-exporter.fullname" . }}
 type: Opaque
 data:
   {{ if .Values.aws.accessKeyId }}
