--- a/jbt-athena-exporter/templates/service.yaml
+++ b/jbt-athena-exporter/templates/service.yaml
@@ -1,20 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cloudwatch-exporter-chart.fullname" . }}
+  name: {{ include "jbt-athena-exporter.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+    app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/cluster: {{ include "cloudwatch-exporter-chart.fullname" . }}
+    app.kubernetes.io/cluster: {{ include "jbt-athena-exporter.fullname" . }}
 spec:
   selector:
-    app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+    app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: 9106
       protocol: TCP
+      name: athena
 
