--- a/jbt-athena-exporter/templates/deployment.yaml
+++ b/jbt-athena-exporter/templates/deployment.yaml
@@ -1,39 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cloudwatch-exporter-chart.fullname" . }}
+  name: {{ include "jbt-athena-exporter.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+    app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/cluster: {{ include "cloudwatch-exporter-chart.fullname" . }}
+    app.kubernetes.io/cluster: {{ include "jbt-athena-exporter.fullname" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+      app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "cloudwatch-exporter-chart.name" . }}
+        app.kubernetes.io/name: {{ include "jbt-athena-exporter.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/cluster: {{ include "cloudwatch-exporter-chart.fullname" . }}
+        app.kubernetes.io/cluster: {{ include "jbt-athena-exporter.fullname" . }}
     spec:
       containers:
-      - name: cloudwatch-exporter-chart
+      - name: jbt-athena-exporter
         env:
           - name: AWS_ACCESS_KEY_ID
             valueFrom:
               secretKeyRef:
                 key: aws-access-key-id
-                name: {{ include "cloudwatch-exporter-chart.fullname" . }}
+                name: {{ include "jbt-athena-exporter.fullname" . }}
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
                 key: aws-secret-access-key
-                name: {{ include "cloudwatch-exporter-chart.fullname" . }}
+                name: {{ include "jbt-athena-exporter.fullname" . }}
           - name: AWS_DEFAULT_REGION
             value: {{ .Values.aws.defaultRegion | quote }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
